--- a/src/nine/package.json
+++ b/src/nine/package.json
@@ -4,12 +4,20 @@
   "description": "this is a test for frontend lessons",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "babel": "babel src --out-dir lib"
   },
   "keywords": [
     "time",
     "date"
   ],
   "author": "jinwei peng, other contributor",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/plugin-proposal-decorators": "^7.18.9",
+    "@babel/plugin-transform-arrow-functions": "^7.18.6",
+    "@babel/preset-env": "^7.18.9",
+    "@vue/babel-preset-app": "^5.0.8"
+  }
 }
