--- a/src/nine/package.json
+++ b/src/nine/package.json
@@ -19,5 +19,8 @@
     "@babel/plugin-transform-arrow-functions": "^7.18.6",
     "@babel/preset-env": "^7.18.9",
     "@vue/babel-preset-app": "^5.0.8"
+  },
+  "dependencies": {
+    "core-js": "^3.23.5"
   }
 }
